argo/growi/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  template:
    metadata:
      labels:
        io.kompose.service: app
    securityContext:
      runAsUser: 0
      runAsNonRoot: false
    spec:
      containers:
      - image: weseek/growi:6.0.15
        name: app
        ports:
        - containerPort: 3000
        resources: {}
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - mountPath: /data
          name: growi-data
        # args:
        # - yarn migrate && node -r dotenv-flow/config --expose_gc dist/server/app.js
        # command:
        # - dockerize
        # - -wait
        # - tcp://mongo:27017
        # - -wait
        # - tcp://elasticsearch:9200
        # - -timeout
        # - 60s
        # - /docker-entrypoint.sh
      restartPolicy: Always
      volumes:
      - name: growi-data
        persistentVolumeClaim:
          claimName: growi-data
