argo/growi/es-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: elasticsearch
  name: elasticsearch
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: elasticsearch
  template:
    metadata:
      labels:
        io.kompose.service: elasticsearch
    spec:
      containers:
      - image: thr3a/growi-es
        name: elasticsearch
        resources: {}
        volumeMounts:
        - mountPath: /usr/share/elasticsearch/data
          name: es-data
      volumes:
      - name: es-data
        persistentVolumeClaim:
          claimName: es-data
