argo/growi/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: mongo
    spec:
      containers:
      - image: mongo:4.4
        name: mongo
        resources: {}
        volumeMounts:
        - mountPath: /data/configdb
          name: mongo-configdb
        - mountPath: /data/db
          name: mongo-db
      restartPolicy: Always
      volumes:
      - name: mongo-configdb
        persistentVolumeClaim:
          claimName: mongo-configdb
      - name: mongo-db
        persistentVolumeClaim:
          claimName: mongo-db
