argo/growi/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: app
  name: app
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    io.kompose.service: app
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: elasticsearch
  name: elasticsearch
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 9200
    targetPort: 9200
  selector:
    io.kompose.service: elasticsearch
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: mongo
  name: mongo
spec:
  type: ClusterIP
  ports:
  - name: mongo
    port: 27017
    targetPort: 27017
  selector:
    io.kompose.service: mongo
